--- a/OF.ServiceApp/OF.ServiceApp.csproj
+++ b/OF.ServiceApp/OF.ServiceApp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <StartupObject>OF.ServiceApp.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
