--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,5 @@ pip-log.txt
 /WSUI.Site/WordPressVersion/wp-content/cache/page_enhanced/outlookfinder.com/try/_index.html_gzip.old
 /ROutput
 /PSTRiverPlugin/target
+*.xml
+*.publish
