- updated generating application; - updated the manifest; - restored restriction for attachments, it lost during merging (5Mb);

--- a/Toolkits/wsgen.exe.config
+++ b/Toolkits/wsgen.exe.config
@@ -35,6 +35,9 @@
                 <value>
                 </value>
             </setting>
+            <setting name="SetupManifestFile" serializeAs="String">
+                <value>\OF.OutlookFinderSetup\app.manifest</value>
+            </setting>
         </WSGen.Properties.Settings>
     </userSettings>
 </configuration>
