--- a/WSGen/app.config
+++ b/WSGen/app.config
@@ -35,6 +35,9 @@
                 <value>
                 </value>
             </setting>
+            <setting name="SetupManifestFile" serializeAs="String">
+                <value>\OF.OutlookFinderSetup\app.manifest</value>
+            </setting>
         </WSGen.Properties.Settings>
     </userSettings>
 </configuration>
