changes from terms to math_phrase for contacts and attachments

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -131,8 +131,10 @@
     <Compile Include="Data\ElasticSearch\OFPluginStatusContainer.cs" />
     <Compile Include="Data\ElasticSearch\OFQueryBoolConditions.cs" />
     <Compile Include="Data\ElasticSearch\OFRiverMeta.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentMatchPhrase.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentWildcard.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameMatchPhrase.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameWildcard.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseCondition.cs" />
@@ -143,6 +145,19 @@
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseMatchPhrase.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseWildcard.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFContactEmailaddress1MatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFContactEmailaddress2MatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFContactEmailaddress3MatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFContactFirstNameMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFContactLastNameMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactBccAddressMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactBccNameMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactCcAddressMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactCcNameMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactFromAddressMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactFromNameMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactToAddressMatchPhrase.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Contact\MatchPhrase\OFEmailContactToNameMatchPhrase.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFContactTerms.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFContactWildcards.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFEmaillContactTerms.cs" />
