added init implementation of suggesting

--- a/Toolkits/reshack/ResourceHacker.ini
+++ b/Toolkits/reshack/ResourceHacker.ini
@@ -25,8 +25,8 @@ CharSet=1
 Style=0
 
 [MRU List]
-1=D:\Sources\WSSQL_GUI\Routput\OutlookFinderSetup.exe
-2=
+1=D:\Sources\WSSQL_GUI\Output\OutlookFinderSetup.exe
+2=D:\Sources\WSSQL_GUI\Routput\OutlookFinderSetup.exe
 3=
 4=
 5=
