--- a/WSUI.Core/log4net.config
+++ b/WSUI.Core/log4net.config
@@ -11,7 +11,7 @@
       <datePattern value="yyyy-MM-dd'.log'" />
       <staticLogFileName value="false" />
       <appendToFile value="true" />
-      <rollingStyle value="Date" />
+      <rollingStyle value="Composite" />
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="5MB" />
       <layout type="log4net.Layout.PatternLayout">
