updated the TurboActivate to 4.0.7.3. Refactored the TurboLImeActivate class. fixed the issue #306 and #310.

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Interfaces\IOFElasticSearchRemovingClient.cs" />
     <Compile Include="Interfaces\IOFElasticsearchStoreClient.cs" />
     <Compile Include="Interfaces\IOFQueryMatchPhrase.cs" />
+    <Compile Include="Interfaces\IOFTurboLimeActivate.cs" />
     <Compile Include="Interfaces\IOFWildcard.cs" />
     <Compile Include="Interfaces\IOutlookFolder.cs" />
     <Compile Include="Interfaces\IOutlookHelper.cs" />
