--- a/Toolkits/TurboApi/Api/SampleApi/CSharp/CSharp.csproj
+++ b/Toolkits/TurboApi/Api/SampleApi/CSharp/CSharp.csproj
@@ -37,7 +37,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>true</UseVSHostingProcess>
@@ -85,6 +85,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReVerifyNow.resx">
+      <DependentUpon>ReVerifyNow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TrialExtension.resx">
       <DependentUpon>TrialExtension.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +99,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="ReVerifyNow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReVerifyNow.Designer.cs">
+      <DependentUpon>ReVerifyNow.cs</DependentUpon>
     </Compile>
     <Compile Include="TrialExtension.cs">
       <SubType>Form</SubType>
