--- a/Toolkits/Elasticsearch/config/elasticsearch.yml
+++ b/Toolkits/Elasticsearch/config/elasticsearch.yml
@@ -37,7 +37,7 @@ cluster.name: outlookfinder
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
 #
-node.name: "Outlook Finder Email River"
+node.name: "Outlook_Finder_Email_River"
 
 # Every node can be configured to allow or deny being eligible as the master,
 # and to allow or deny to store the data.
