--- a/WSUI.Infrastructure/OF.Infrastructure.csproj
+++ b/WSUI.Infrastructure/OF.Infrastructure.csproj
@@ -122,6 +122,7 @@
       <Link>Properties\Version.cs</Link>
     </Compile>
     <Compile Include="Helpers\OFEmailCommandPreviewHelper.cs" />
+    <Compile Include="Helpers\OFInspectionHelper.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticInitializingClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticRiverStatus.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticSeachIndexOutlookItemsClient.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticsearchStoreClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticTrackingClient.cs" />
     <Compile Include="Implements\ElasticSearch\Clients\OFElasticUpdateSettingsClient.cs" />
+    <Compile Include="Implements\Inspections\OFESServiceSettingInspection.cs" />
     <Compile Include="Implements\Service\IOutlookItemsReader.cs" />
     <Compile Include="MVVM\AdvancedSearch\OFSortByAdvancedSearchCriteria.cs" />
     <Compile Include="MVVM\AdvancedSearch\OFStringAdvancedSearchCriteria.cs" />
