--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,5 @@ pip-log.txt
 /PSTRiverPlugin/target
 *.xml
 *.publish
+/Toolkits/Elasticsearch/data/outlookfinder/nodes/0
+/Toolkits/Elasticsearch/logs
